# pisah

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
cmake/: FindPCRECPP.cmake
src/: CMakeLists.txt  berpecah.cpp  berpecah.hpp  main.cpp  pisah.cpp  pisah.hpp  processor.cpp  processor.hpp  utils.cpp  utils.hpp
src/langrules/: english_rules.hpp  rules.cpp  rules.hpp
test/: CMakeLists.txt  main.cpp  test_utils.hpp
test/lang/: english.cpp
